--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "page_1.html">Page 1</a></li>
-                <li><a href = "page_2.html">Page 2</a></li>
-                <li><a href = "page_3.html">Page 3</a></li>
+                <li><a href = "Academic_Suport.html">Academic Suport at UMSI</a></li>
+                <li><a href = "CAPS.html">Counseling and Psychological Services (CAPS)</a></li>
+                <li><a href = "CEW+.html">Center for the Education of Women + (CEW+)</a></li>
             </ul>
         </nav>
         <h1>Student Success Portal</h1>
@@ -27,9 +27,9 @@
             <p> Your Comprehensive Guide to Resources for Graduate School Success</p>
             <p>This guide is set up to help you be successul inside and outside of the classroom and we have included the following resources throughout our site:</p>
             <ol>
-                <li>Academic Resources</li>
+                <li><a href = "Academic_Suport.html">Academic Resources</a></li>
                 <li>Physical Health</li>
-                <li>Mental Health</li>
+                <li><a href = "CAPS.html">Mental Health</a></li>
                 <li>Life Outside Classroom</li>
                 <li>Contact</li>
             </ol>
@@ -54,7 +54,7 @@
                 <p>Participate in various fitness programs, sports clubs, and use of gym facilities to stay active and healthy.</p>
             </article>
         </section>
-        
+
         <section>
             <h2>Mental Health</h2>
             <p>Maintaining your mental well-being is crucial for thriving in graduate school. Here are resources to support your mental health:</p>
@@ -79,7 +79,6 @@
             </article>
         </section>
 
-        
         <section id="life-outside-classroom">
             <h2>Life Outside the Classroom</h2>
             <p>Graduate school is more than just academics. It's important to cultivate a balanced life. Here are some resources to help you enjoy life outside the classroom:</p>
