--- a/Academic_Suport.html
+++ b/Academic_Suport.html
@@ -35,7 +35,7 @@
         <div>
             <h2>Our Commitment</h2>
             <figure>
-                <img src="images/MCOMMONS-StudyingForFallFinals2024-4.jpg" alt="Student studying">
+                <img src="images/MCOMMONS-StudyingForFallFinals2024-4.jpeg" alt="Student studying">
                 <figcaption>
                     Student enjoying a study session
                 </figcaption>
