--- a/CAPS.html
+++ b/CAPS.html
@@ -24,12 +24,19 @@
     <main>
         <div>
             <h2>Our Commitment</h2>
+            <figure>
+                <img src="images/MCOMMONS-EarthFestClimateActionSummit2024-17 Medium.jpg"
+                alt="Emotional resilience">
+            </figure>
             <p>At the University of Michigan Counseling and Psychological Services (CAPS), we are committed to supporting your mental health and well-being throughout your academic journey. Our team of licensed mental health professionals provides confidential counseling services, including individual therapy, group sessions, and crisis intervention to help you navigate personal challenges, academic stress, and emotional concerns. Through our embedded model, CAPS counselors are available within specific schools and colleges, making mental health support more accessible where you study and learn. We offer innovative workshop series on topics like stress management, mindfulness, and healthy relationships, as well as our popular "Wellness Wednesdays" programming that provides practical tools for maintaining emotional balance. Our online self-help resources and virtual counseling options ensure you can access support when and where you need it most. CAPS also coordinates with other campus resources and community providers to ensure comprehensive care that addresses your unique needs. By engaging with CAPS services, you can develop effective coping strategies, build resilience, and maintain your emotional well-being while pursuing your academic goals. </p>
 
         </div>
 
         <div>
             <h2>Our Services</h2>
+            <figure>
+                <img src="images/UHS.jpg" alt="University Health Services building">
+            </figure>
             <p>University Health & Counseling (UHC) supports the health and well-being of the campus community. We are inspired to help students realize their potential, cope with the stresses of life, work productively, and connect meaningfully with others.
 
             UHC is made up of Counseling and Psychological Services (CAPS), which offers counseling services, and University Health Service (UHS), which offers medical services. This website is about CAPS. For information about UHS, please visit the UHS website.
