--- a/CEW+.html
+++ b/CEW+.html
@@ -24,11 +24,18 @@
     <main>
         <div>
             <h2>Comprehensive Support</h2>
+            <figure>
+                <img src="images/MCOMMONS-EarthFestClimateActionSummit2024-01 Large.jpg"
+                alt="Presenting Research">
+            </figure>
             <p>At the University of Michigan Center for the Education of Women+ (CEW+), we are committed to supporting your academic journey through comprehensive resources designed to help you succeed. Our experienced counselors provide individualized academic guidance, helping you navigate your educational path, explore career opportunities, and overcome any obstacles you may encounter. CEW+ offers dedicated study spaces, including our newly renovated Student Center, where you can focus on your coursework in a welcoming environment. Through our Critical Difference Grants, Emergency Funds, and Scholarship Program, we provide crucial financial support to help you meet your educational expenses. Our professional development workshops and writing assistance services strengthen your academic skills, while our peer mentoring program connects you with experienced students who understand your unique challenges. The CEW+ Research Library houses specialized resources focused on gender and educational equity, providing valuable materials for research and personal growth. By engaging with these CEW+ resources, you can build a strong foundation for academic success while being part of a supportive community that champions your achievements. </p>
 
         </div>
         <div>
             <h2>Supporting Success</h2>
+            <figure>
+                <img src="images/MCOMMONS-EarthFestClimateActionSummit2024-08 Large.jpg" alt="Student Success">
+            </figure>
             <p>At CEW+, we navigate circumstantial barriers by providing academic, financial, and professional support to help you reach your personal potential. Established to support women through higher education, we lift up women and all underserved communities at U-M and beyond. Through career and education counseling, funding, workshops, events, and a diverse, welcoming community, we exist to empower. We are CEW+, and we’re here to help you reach your potential.
             </p>
         </div>
