--- a/Academic_Suport.html
+++ b/Academic_Suport.html
@@ -31,7 +31,16 @@
             <p>At the University of Michigan School of Information (UMSI), we are committed to supporting our students' academic success by offering a wide array of resources and services. Our academic advising team provides personalized guidance to help you navigate your curriculum, select courses, and address any academic challenges or questions you may encounter during your studies. UMSI students also have access to the extensive collections and study spaces within the University Library system, offering both digital and physical resources essential for research and coursework. Additionally, our specialized tutoring services and the UMSI Writing Center are available to support you in mastering complex subjects and enhancing your written communication skills. By utilizing these academic resources, UMSI students can thrive in their studies and achieve their educational goals. </p>
 
         </div>
-
+        <div>
+            <div>
+                <iframe
+                  src="https://www.youtube.com/embed/ZrDRVTF_-i0?si=rrXpLji8ko8EDyHT"
+                  title="YouTube video player"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen>
+                </iframe>
+        </div>
         <div>
             <h2>Our Commitment</h2>
             <figure>
@@ -41,6 +50,26 @@
                 </figcaption>
             </figure>
             <p>At the University of Michigan School of Information (UMSI), we are committed to supporting our students' academic success through comprehensive resources that extend far beyond the classroom. Our academic advising team provides personalized guidance for curriculum planning and course selection, while our Career Development Office offers specialized counseling and preparation for the information profession. Students benefit from state-of-the-art computing resources, technical support, and access to the extensive University Library system's digital and physical collections. Our UMSI Writing Center and tutoring services help students master complex subjects, while the Peer Mentoring Program connects them with experienced peers for additional guidance. Through our industry partnerships, students gain practical experience via internships and engaged learning initiatives, and our International Programs Office facilitates valuable cross-cultural experiences in the field. From our specialized Design Lab and Interactive Social Computing spaces to faculty research mentorship opportunities, UMSI creates an enriching environment where students can develop into skilled information professionals while achieving their educational goals.</p>
+        </div>
+        <div>
+            <h1>Top 5 Reasons to Seek Academic Support at U-M</h1>
+            <ul>
+                <li>
+                <strong>Expert Guidance:</strong> Access to tutors, advisors, and mentors with expertise in a variety of fields to help you excel academically.
+                </li>
+                <li>
+                <strong>Improve Study Strategies:</strong> Learn effective time management, note-taking, and test preparation techniques tailored to your needs.
+                </li>
+                <li>
+                <strong>Collaborative Learning:</strong> Participate in study groups and workshops that encourage collaboration and deeper understanding of course material.
+                </li>
+                <li>
+                <strong>Boost Confidence:</strong> Gain a better grasp of challenging subjects and build confidence in your academic abilities.
+                </li>
+                <li>
+                <strong>Comprehensive Resources:</strong> Benefit from access to libraries, writing centers, and technology support to enhance your learning experience.
+                </li>
+            </ul>
         </div>
 
             <!-- Jackie Wolf -->
