--- a/CEW+.html
+++ b/CEW+.html
@@ -23,6 +23,37 @@
     </header>
     <main>
         <div>
+            <h2>Key Services Offered by CEW+</h2>
+            <ul>
+              <li>
+                <strong>Scholarships and Funding:</strong>
+                <ul>
+                  <li>Scholarships for returning students, nontraditional learners, and those facing financial hardships.</li>
+                  <li>Emergency funding for urgent financial situations.</li>
+                </ul>
+              </li>
+              <li>
+                <strong>Counseling and Coaching:</strong>
+                <ul><li>Free and confidential counseling to navigate challenges related to career planning, education, and life transitions.</li></ul>
+              </li>
+              <li>
+                <strong>Workshops and Events:</strong>
+                <ul>
+                  <li>Workshops on leadership development, career readiness, and personal well-being.</li>
+                  <li>Networking opportunities and conferences to empower individuals and build supportive communities.</li>
+                </ul>
+              </li>
+              <li>
+                <strong>Advocacy and Resources:</strong>
+                <ul><li>Programs and policies that support equity and inclusion, with resources for nontraditional and underrepresented students. </li></ul>
+              </li>
+              <li>
+                <strong>Lactation and Family Resources:</strong>
+                <ul><li>Lactation rooms on campus and guidance for balancing family, school, and work responsibilities.</li></ul>
+              </li>
+            </ul>
+        </div>
+        <div>
             <h2>Comprehensive Support</h2>
             <figure>
                 <img src="images/MCOMMONS-EarthFestClimateActionSummit2024-01 Large.jpg"
