--- a/CAPS.html
+++ b/CAPS.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page 1</title>
 </head>
+
 <body>
 
     <header>
-            <a href = "">Skip to Main Content</a>
-            <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
+        <a href="">Skip to Main Content</a>
+        <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
             <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "Academic_Suport.html">Academic Suport at UMSI</a></li>
-                <li><a href = "CAPS.html">Counseling and Psychological Services (CAPS)</a></li>
-                <li><a href = "CEW+.html">Center for the Education of Women + (CEW+)</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Academic_Suport.html">Academic Suport at UMSI</a></li>
+                <li><a href="CAPS.html">Counseling and Psychological Services (CAPS)</a></li>
+                <li><a href="CEW+.html">Center for the Education of Women + (CEW+)</a></li>
             </ul>
         </nav>
         <h1>Counseling and Psychological Services (CAPS)</h1>
@@ -25,42 +27,93 @@
         <div>
             <h2>Our Commitment</h2>
             <figure>
-                <img src="images/MCOMMONS-EarthFestClimateActionSummit2024-17 Medium.jpg"
-                alt="Emotional resilience">
+                <img src="images/MCOMMONS-EarthFestClimateActionSummit2024-17 Medium.jpg" alt="Emotional resilience">
             </figure>
-            <p>At the University of Michigan Counseling and Psychological Services (CAPS), we are committed to supporting your mental health and well-being throughout your academic journey. Our team of licensed mental health professionals provides confidential counseling services, including individual therapy, group sessions, and crisis intervention to help you navigate personal challenges, academic stress, and emotional concerns. Through our embedded model, CAPS counselors are available within specific schools and colleges, making mental health support more accessible where you study and learn. We offer innovative workshop series on topics like stress management, mindfulness, and healthy relationships, as well as our popular "Wellness Wednesdays" programming that provides practical tools for maintaining emotional balance. Our online self-help resources and virtual counseling options ensure you can access support when and where you need it most. CAPS also coordinates with other campus resources and community providers to ensure comprehensive care that addresses your unique needs. By engaging with CAPS services, you can develop effective coping strategies, build resilience, and maintain your emotional well-being while pursuing your academic goals. </p>
+            <p>At the University of Michigan Counseling and Psychological Services (CAPS), we are committed to
+                supporting your mental health and well-being throughout your academic journey. Our team of licensed
+                mental health professionals provides confidential counseling services, including individual therapy,
+                group sessions, and crisis intervention to help you navigate personal challenges, academic stress, and
+                emotional concerns. Through our embedded model, CAPS counselors are available within specific schools
+                and colleges, making mental health support more accessible where you study and learn. We offer
+                innovative workshop series on topics like stress management, mindfulness, and healthy relationships, as
+                well as our popular "Wellness Wednesdays" programming that provides practical tools for maintaining
+                emotional balance. Our online self-help resources and virtual counseling options ensure you can access
+                support when and where you need it most. CAPS also coordinates with other campus resources and community
+                providers to ensure comprehensive care that addresses your unique needs. By engaging with CAPS services,
+                you can develop effective coping strategies, build resilience, and maintain your emotional well-being
+                while pursuing your academic goals. </p>
 
         </div>
-
         <div>
             <h2>Our Services</h2>
-            <figure>
-                <img src="images/UHS.jpg" alt="University Health Services building">
-            </figure>
-            <p>University Health & Counseling (UHC) supports the health and well-being of the campus community. We are inspired to help students realize their potential, cope with the stresses of life, work productively, and connect meaningfully with others.
+            <ul>
+                <li>
+                    <strong>Individual and Group Counseling:</strong>
+                    Confidential sessions to address personal, academic, and mental health challenges.
+                </li>
+                <li>
+                    <strong>Workshops and Outreach:</strong>
+                    Programs on stress management, mindfulness, and mental health awareness.
+                </li>
+                <li>
+                    <strong>Crisis Services:</strong>
+                    Immediate support for students experiencing urgent mental health crises.
+                </li>
+                <li>
+                    <strong>Wellness Resources:</strong>
+                    Self-help tools, online screenings, and wellness apps like SilverCloud and Headspace.
+                </li>
+                <li>
+                    <strong>Peer Support:</strong>
+                    Peer-led groups and programs to foster connection and shared experiences.
+                </li>
+            </ul>
+            <div>
+                <h2>Our Services</h2>
+                <figure>
+                    <img src="images/UHS.jpg" alt="University Health Services building">
+                </figure>
+                <p>University Health & Counseling (UHC) supports the health and well-being of the campus community. We
+                    are inspired to help students realize their potential, cope with the stresses of life, work
+                    productively, and connect meaningfully with others.
 
-            UHC is made up of Counseling and Psychological Services (CAPS), which offers counseling services, and University Health Service (UHS), which offers medical services. This website is about CAPS. For information about UHS, please visit the UHS website.
+                    UHC is made up of Counseling and Psychological Services (CAPS), which offers counseling services,
+                    and University Health Service (UHS), which offers medical services. This website is about CAPS. For
+                    information about UHS, please visit the UHS website.
 
-            CAPS is committed to creating an environment based on our values of multicultural, multi-disciplinary and multi-theoretical practices that allow our diverse student body to access care, receive high quality services and take positive pathways to mental health. We are happy to offer both in-person and virtual services.
+                    CAPS is committed to creating an environment based on our values of multicultural,
+                    multi-disciplinary and multi-theoretical practices that allow our diverse student body to access
+                    care, receive high quality services and take positive pathways to mental health. We are happy to
+                    offer both in-person and virtual services.
 
-            Our Front Desk (Michigan Union 4th Floor) is open and ready to help support you -- staff members are available throughout the day to assist you with your needs to answer questions, and get you to the right place. We can be reached by phone at: (734) 764-8312.
+                    Our Front Desk (Michigan Union 4th Floor) is open and ready to help support you -- staff members are
+                    available throughout the day to assist you with your needs to answer questions, and get you to the
+                    right place. We can be reached by phone at: (734) 764-8312.
 
-            CAPS has a limited number of private spaces available for students to connect with their counselor via telecounseling. Please contact the front desk for more information on those private spaces.
+                    CAPS has a limited number of private spaces available for students to connect with their counselor
+                    via telecounseling. Please contact the front desk for more information on those private spaces.
 
-            Please Note: During high-demand periods, CAPS will be unable to accommodate class-related interviews and/or projects. Many students are able to find the information they need within our website and our annual reports.
+                    Please Note: During high-demand periods, CAPS will be unable to accommodate class-related interviews
+                    and/or projects. Many students are able to find the information they need within our website and our
+                    annual reports.
 
-            The CAPS office is unable to participate in scavenger hunts for students due to maintaining the confidentiality of our clients. However, you are welcome to direct students to the wellness zone, which has a separate entrance adjacent to CAPS. If you have any questions, please feel free to contact us.</p>
-        </div>
+                    The CAPS office is unable to participate in scavenger hunts for students due to maintaining the
+                    confidentiality of our clients. However, you are welcome to direct students to the wellness zone,
+                    which has a separate entrance adjacent to CAPS. If you have any questions, please feel free to
+                    contact us.</p>
+            </div>
 
             <!-- Jackie Wolf -->
 
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
     </main>
     <footer>
-        <p>MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising </a></p>
+        <p>MSI Academic Advising | <a
+                href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic
+                Advising </a></p>
     </footer>
 
 </body>
