--- a/CEW+.html
+++ b/CEW+.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page 1</title>
 </head>
+
 <body>
     <header>
-            <a href = "">Skip to Main Content</a>
-            <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
+        <a href="">Skip to Main Content</a>
+        <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
             <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "Academic_Suport.html">Academic Suport at UMSI</a></li>
-                <li><a href = "CAPS.html">Counseling and Psychological Services (CAPS)</a></li>
-                <li><a href = "CEW+.html">Center for the Education of Women + (CEW+)</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Academic_Suport.html">Academic Suport at UMSI</a></li>
+                <li><a href="CAPS.html">Counseling and Psychological Services (CAPS)</a></li>
+                <li><a href="CEW+.html">Center for the Education of Women + (CEW+)</a></li>
             </ul>
         </nav>
         <h1>
@@ -25,41 +27,63 @@
         <div>
             <h2>Key Services Offered by CEW+</h2>
             <ul>
-              <li>
-                <strong>Scholarships and Funding:</strong>
-                <ul>
-                  <li>Scholarships for returning students, nontraditional learners, and those facing financial hardships.</li>
-                  <li>Emergency funding for urgent financial situations.</li>
-                </ul>
-              </li>
-              <li>
-                <strong>Counseling and Coaching:</strong>
-                <ul><li>Free and confidential counseling to navigate challenges related to career planning, education, and life transitions.</li></ul>
-              </li>
-              <li>
-                <strong>Workshops and Events:</strong>
-                <ul>
-                  <li>Workshops on leadership development, career readiness, and personal well-being.</li>
-                  <li>Networking opportunities and conferences to empower individuals and build supportive communities.</li>
-                </ul>
-              </li>
-              <li>
-                <strong>Advocacy and Resources:</strong>
-                <ul><li>Programs and policies that support equity and inclusion, with resources for nontraditional and underrepresented students. </li></ul>
-              </li>
-              <li>
-                <strong>Lactation and Family Resources:</strong>
-                <ul><li>Lactation rooms on campus and guidance for balancing family, school, and work responsibilities.</li></ul>
-              </li>
+                <li>
+                    <strong>Scholarships and Funding:</strong>
+                    <ul>
+                        <li>Scholarships for returning students, nontraditional learners, and those facing financial
+                            hardships.</li>
+                        <li>Emergency funding for urgent financial situations.</li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Counseling and Coaching:</strong>
+                    <ul>
+                        <li>Free and confidential counseling to navigate challenges related to career planning,
+                            education, and life transitions.</li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Workshops and Events:</strong>
+                    <ul>
+                        <li>Workshops on leadership development, career readiness, and personal well-being.</li>
+                        <li>Networking opportunities and conferences to empower individuals and build supportive
+                            communities.</li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Advocacy and Resources:</strong>
+                    <ul>
+                        <li>Programs and policies that support equity and inclusion, with resources for nontraditional
+                            and underrepresented students. </li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Lactation and Family Resources:</strong>
+                    <ul>
+                        <li>Lactation rooms on campus and guidance for balancing family, school, and work
+                            responsibilities.</li>
+                    </ul>
+                </li>
             </ul>
         </div>
         <div>
             <h2>Comprehensive Support</h2>
             <figure>
-                <img src="images/MCOMMONS-EarthFestClimateActionSummit2024-01 Large.jpg"
-                alt="Presenting Research">
+                <img src="images/MCOMMONS-EarthFestClimateActionSummit2024-01 Large.jpg" alt="Presenting Research">
             </figure>
-            <p>At the University of Michigan Center for the Education of Women+ (CEW+), we are committed to supporting your academic journey through comprehensive resources designed to help you succeed. Our experienced counselors provide individualized academic guidance, helping you navigate your educational path, explore career opportunities, and overcome any obstacles you may encounter. CEW+ offers dedicated study spaces, including our newly renovated Student Center, where you can focus on your coursework in a welcoming environment. Through our Critical Difference Grants, Emergency Funds, and Scholarship Program, we provide crucial financial support to help you meet your educational expenses. Our professional development workshops and writing assistance services strengthen your academic skills, while our peer mentoring program connects you with experienced students who understand your unique challenges. The CEW+ Research Library houses specialized resources focused on gender and educational equity, providing valuable materials for research and personal growth. By engaging with these CEW+ resources, you can build a strong foundation for academic success while being part of a supportive community that champions your achievements. </p>
+            <p>At the University of Michigan Center for the Education of Women+ (CEW+), we are committed to supporting
+                your academic journey through comprehensive resources designed to help you succeed. Our experienced
+                counselors provide individualized academic guidance, helping you navigate your educational path, explore
+                career opportunities, and overcome any obstacles you may encounter. CEW+ offers dedicated study spaces,
+                including our newly renovated Student Center, where you can focus on your coursework in a welcoming
+                environment. Through our Critical Difference Grants, Emergency Funds, and Scholarship Program, we
+                provide crucial financial support to help you meet your educational expenses. Our professional
+                development workshops and writing assistance services strengthen your academic skills, while our peer
+                mentoring program connects you with experienced students who understand your unique challenges. The CEW+
+                Research Library houses specialized resources focused on gender and educational equity, providing
+                valuable materials for research and personal growth. By engaging with these CEW+ resources, you can
+                build a strong foundation for academic success while being part of a supportive community that champions
+                your achievements. </p>
 
         </div>
         <div>
@@ -67,17 +91,23 @@
             <figure>
                 <img src="images/MCOMMONS-EarthFestClimateActionSummit2024-08 Large.jpg" alt="Student Success">
             </figure>
-            <p>At CEW+, we navigate circumstantial barriers by providing academic, financial, and professional support to help you reach your personal potential. Established to support women through higher education, we lift up women and all underserved communities at U-M and beyond. Through career and education counseling, funding, workshops, events, and a diverse, welcoming community, we exist to empower. We are CEW+, and we’re here to help you reach your potential.
+            <p>At CEW+, we navigate circumstantial barriers by providing academic, financial, and professional support
+                to help you reach your personal potential. Established to support women through higher education, we
+                lift up women and all underserved communities at U-M and beyond. Through career and education
+                counseling, funding, workshops, events, and a diverse, welcoming community, we exist to empower. We are
+                CEW+, and we’re here to help you reach your potential.
             </p>
         </div>
-            <!-- Jackie Wolf -->
+        <!-- Jackie Wolf -->
         <div></div>
         <div></div>
         <div></div>
         <div></div>
     </main>
     <footer>
-        <p>MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising </a></p>
+        <p>MSI Academic Advising | <a
+                href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic
+                Advising </a></p>
     </footer>
 </body>
 
