--- a/CAPS.html
+++ b/CAPS.html
@@ -68,6 +68,10 @@
                     Peer-led groups and programs to foster connection and shared experiences.
                 </li>
             </ul>
+        </div>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/j9rL9mByuRI?si=oT3uyyVFRv1VuMux" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
             <div>
                 <h2>Our Services</h2>
                 <figure>
