--- a/CEW+.html
+++ b/CEW+.html
@@ -22,6 +22,9 @@
         <h1>
             Center for the Education of Women + (CEW+)
         </h1>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/AKFhLURxNxc?si=dvd5pektKoYuobaG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
     </header>
     <main>
         <div>
