--- a/Academic_Suport.html
+++ b/Academic_Suport.html
@@ -43,10 +43,7 @@
         </div>
         <div>
             <div>
-                <iframe src="https://www.youtube.com/embed/ZrDRVTF_-i0?si=rrXpLji8ko8EDyHT" title="YouTube video player"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-                </iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ZrDRVTF_-i0?si=hLRZBIGpaNw1oyyg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div>
                 <h2>Our Commitment</h2>
