--- a/CEW+.html
+++ b/CEW+.html
@@ -4,10 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 1</title>
+    <title>Center for the Education of Women + (CEW+)</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!-- On CEW+.html -->
+    <body class="cew-page">
     <header>
         <a href="">Skip to Main Content</a>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
@@ -22,11 +25,12 @@
         <h1>
             Center for the Education of Women + (CEW+)
         </h1>
+       
+    </header>
+    <main>
         <div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/AKFhLURxNxc?si=dvd5pektKoYuobaG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-    </header>
-    <main>
         <div>
             <h2>Key Services Offered by CEW+</h2>
             <ul>
@@ -38,6 +42,7 @@
                         <li>Emergency funding for urgent financial situations.</li>
                     </ul>
                 </li>
+        
                 <li>
                     <strong>Counseling and Coaching:</strong>
                     <ul>
