--- a/404.html
+++ b/404.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 1</title>
+    <title>Page Not Found</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -20,6 +21,7 @@
                 <li><a href="CEW+.html">Center for the Education of Women + (CEW+)</a></li>
             </ul>
         </nav>
+    </header>
     <main>
         <div>
             <h2>Page Not Found</h2>
