--- a/Academic_Suport.html
+++ b/Academic_Suport.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 1</title>
+    <title>Academic Suport at UMSI</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <!-- On Academic_Suport.html -->
+    <body class="academic-page">
+        
     <header>
         <a href="">Skip to Main Content</a>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
