--- a/CEW+.html
+++ b/CEW+.html
@@ -28,10 +28,37 @@
        
     </header>
     <main>
-        <div>
+        <div<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Center for the Education of Women + (CEW+)</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body class="cew-page">
+    <header>
+        <a href="#main" class="skip">Skip to Main Content</a>
+        <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
+        <h1>
+            Center for the Education of Women + (CEW+)
+        </h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Academic_Suport.html">Academic Suport at UMSI</a></li>
+                <li><a href="CAPS.html">Counseling and Psychological Services (CAPS)</a></li>
+                <li class="current-page"><a href="CEW+.html">Center for the Education of Women + (CEW+)</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main id="main">
+        <div class="video">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/AKFhLURxNxc?si=dvd5pektKoYuobaG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-        <div>
+        <section>
             <h2>Key Services Offered by CEW+</h2>
             <ul>
                 <li>
@@ -73,8 +100,8 @@
                     </ul>
                 </li>
             </ul>
-        </div>
-        <div>
+        </section>
+        <section>
             <h2>Comprehensive Support</h2>
             <figure>
                 <img src="images/MCOMMONS-EarthFestClimateActionSummit2024-01 Large.jpg" alt="Presenting Research">
@@ -91,10 +118,9 @@
                 Research Library houses specialized resources focused on gender and educational equity, providing
                 valuable materials for research and personal growth. By engaging with these CEW+ resources, you can
                 build a strong foundation for academic success while being part of a supportive community that champions
-                your achievements. </p>
-
-        </div>
-        <div>
+                your achievements.</p>
+        </section>
+        <section>
             <h2>Supporting Success</h2>
             <figure>
                 <img src="images/MCOMMONS-EarthFestClimateActionSummit2024-08 Large.jpg" alt="Student Success">
@@ -103,14 +129,9 @@
                 to help you reach your personal potential. Established to support women through higher education, we
                 lift up women and all underserved communities at U-M and beyond. Through career and education
                 counseling, funding, workshops, events, and a diverse, welcoming community, we exist to empower. We are
-                CEW+, and we’re here to help you reach your potential.
+                CEW+, and we're here to help you reach your potential.
             </p>
-        </div>
-        <!-- Jackie Wolf -->
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        </section>
     </main>
     <footer>
         <p>MSI Academic Advising | <a
