--- a/CAPS.html
+++ b/CAPS.html
@@ -11,7 +11,7 @@
 <body>
     <!-- On CAPS.html -->
     <body class="caps-page">
-        
+
     <header>
         <a href="">Skip to Main Content</a>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
@@ -30,7 +30,7 @@
         <div>
             <h2>Our Commitment</h2>
             <figure>
-                <img src="images/MCOMMONS-EarthFestClimateActionSummit2024-17 Medium.jpg" alt="Emotional resilience">
+                <img src="images/MCOMMONS-EarthFestClimateActionSummit2024-17.jpg" alt="Emotional resilience">
             </figure>
             <p>At the University of Michigan Counseling and Psychological Services (CAPS), we are committed to
                 supporting your mental health and well-being throughout your academic journey. Our team of licensed
