--- a/CEW+.html
+++ b/CEW+.html
@@ -55,7 +55,7 @@
         </nav>
     </header>
     <main id="main">
-        <div class="video">
+        <div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/AKFhLURxNxc?si=dvd5pektKoYuobaG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <section>
@@ -104,7 +104,7 @@
         <section>
             <h2>Comprehensive Support</h2>
             <figure>
-                <img src="images/MCOMMONS-EarthFestClimateActionSummit2024-01 Large.jpg" alt="Presenting Research">
+                <img src="images/MCOMMONS-EarthFestClimateActionSummit2024-01.jpg" alt="Presenting Research">
             </figure>
             <p>At the University of Michigan Center for the Education of Women+ (CEW+), we are committed to supporting
                 your academic journey through comprehensive resources designed to help you succeed. Our experienced
@@ -123,7 +123,7 @@
         <section>
             <h2>Supporting Success</h2>
             <figure>
-                <img src="images/MCOMMONS-EarthFestClimateActionSummit2024-08 Large.jpg" alt="Student Success">
+                <img src="images/MCOMMONS-EarthFestClimateActionSummit2024-08.jpg" alt="Student Success">
             </figure>
             <p>At CEW+, we navigate circumstantial barriers by providing academic, financial, and professional support
                 to help you reach your personal potential. Established to support women through higher education, we
